--- a/web_server/temperature_data/platformio.ini
+++ b/web_server/temperature_data/platformio.ini
@@ -14,5 +14,7 @@ board = etboard
 framework = arduino
 monitor_speed = 115200
 ; lib_deps = adafruit/RTClib@^2.1.1
-lib_deps = chuckbell/MySQL Connector Arduino@^1.2.0
+lib_deps = chuckbell/MySQL Connector Arduino@^1.2.0 
+            olikraus/U8g2@^2.35.3
+	          thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.4.0
             
